[gd_scene load_steps=9 format=2]

[ext_resource path="res://navigation/in-game-menu/InGameMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://mini-games/timeline/SlotWrapper.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fonts/Signika-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/bgs/TTCBG.png" type="Texture" id=7]
[ext_resource path="res://mini-games/timeline/Timeline.gd" type="Script" id=8]
[ext_resource path="res://mini-games/results/results.tscn" type="PackedScene" id=9]
[ext_resource path="res://mini-games/explanation/explanation.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[node name="Timeline" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 70.0
margin_right = -19.0
margin_bottom = -64.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1039.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "Usporiadaj podÄ¾a poradia"
align = 1
autowrap = true

[node name="SlotWrapper" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 1039.0
margin_bottom = 437.0

[node name="SlotWrapper2" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 441.0
margin_right = 1039.0
margin_bottom = 774.0

[node name="SlotWrapper3" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 778.0
margin_right = 1039.0
margin_bottom = 1111.0

[node name="SlotWrapper4" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1115.0
margin_right = 1039.0
margin_bottom = 1448.0

[node name="SlotWrapper5" parent="VBoxContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1452.0
margin_right = 1039.0
margin_bottom = 1786.0

[node name="InGameMenu" parent="." instance=ExtResource( 1 )]

[node name="Explanation" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Results" parent="." instance=ExtResource( 9 )]
visible = false
